<resources>
    <string name="app_name">T2201 Medical Tracker</string>
    <string name="Speaking">Speaking</string>
    <string name="Walking">Walking</string>
    <string name="Hearing">Hearing</string>
    <string name="Vision">Vision</string>
    <string name="Eliminating">Eliminating</string>
    <string name="Feeding">Feeding</string>
    <string name="Dressing">Dressing</string>
    <string name="Mental">Mental</string>
    <string name="firstLine">Please select from the following icons</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="neutral">Unsure</string>
    <string name="question_blind">Are you considered legally blind?</string>
    <string name="question_marked">Do symptoms persist even with appropriate therapy or medication?</string>
    <string name="editPhone">Name</string>
    <string name="submit_option">Done</string>
    <string name="cancel_option">Cancel</string>
    <string name="select_month">Select a month</string>
    <string name="select_year">Select a year</string>
    <string name="filter_both">Show Both</string>
    <string name="filter_frequency">Frequency</string>
    <string name="filter_severity">Severity</string>
    <string name="chart_description_both">Data for Frequency and Severity</string>
    <string name="chart_description_frequency">Data for Frequency</string>
    <string name="chart_description_severity">Data for Severity</string>
    <string name="chart_label_frequency">Frequency</string>
    <string name="chart_label_average_severity">Average Severity</string>
    <string name="button_create">Create an Entry</string>
    <string name="button_display">Display Entries</string>
    <string name="Medical_Tracker"> Medical Tracker</string>
    <string name="button_back_to_home">Back to Home Page</string>
    <string name="question_severity">How severe are the symptoms on a scale of 1 to 10?</string>
    <string name="button_submit">Submit Answers</string>
    <string name="question_icon_description">Icon representing disability</string>
    <string name="team_name">Wild 4 - CST8334</string>
    <string name="college_date_title">Algonquin College 2020</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="symptom_tracker">Symptoms Tracker</string>
    <string name="Disability_form">For T2201 Disability Tax Credit Form</string>
    <string name="profile_selector">Select a Profile </string>
    <string name="create_profile">CREATE A NEW PROFILE</string>
    <string name="filter_dates">Filter Dates</string>
    <string name="view_summary">View Summary</string>
    <string name="range_of_enteries">Range of Entries</string>
    <string name="date">Date</string>
    <string name="disability">Disability</string>
    <string name="Severity">Severity</string>
    <string name="new_user">NEW USER CREATION</string>
    <string name="fn">First Name </string>
    <string name="type_here">type here </string>
    <string name="ln">Last Name </string>
    <string name="type_here1">type here</string>
    <string name="create">CREATE</string>
    <string name="select_profile">SELECT A PROFILE</string>
    <string name="filter_by_date">Filter by selected dates</string>
    <string name="filter_by_month">Filter by selected month</string>
    <string name="filter_by_year">Filter by selected year</string>
    <string name="show_all_enteries">Displaying all Entries</string>
    <string name="clear_database">Debug: Clear Database</string>
    <string name="custom_entry">Debug: Add Custom Entries</string>
    <string name="reset">Debug: Reset (Clear and add)</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="add_note">Add Note</string>
    <string name="type_note">Type Note</string>
    <string name="DTP">Delete this profile?</string>
    <string name="Delete">Delete</string>
    <string name="Cancel">Cancel</string>
    <string name="Deleted">Profile Deleted</string>
    <string name="Canceled">Delete Canceled</string>
    <string name="LoggedInAs">Logged in as</string>
    <string name="DTE">Delete this entry?</string>
    <string name="infrmation">Information</string>
    <string name="StartDate">Both start and end dates must be selected</string>
    <string name="EndDate">Start date must be before end date</string>
    <string name="EndDay">Select the ending day of week</string>
    <string name="Year">Year of</string>
    <string name="allEnteries">Show all Enteries</string>
    <string name="AddUser">ADD USER </string>
    <string name="FNameNotNull">First Name should be entered</string>
    <string name="LastNameNotNull">"Last Name should be entered" </string>
    <string name="ProfileCreated">Profile Created </string>
    <string name="NoProfileCreated">No Profiles Created </string>










</resources>