<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileCreateActivity">

    <TextView
        android:id="@+id/create_textView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:fontFamily="sans-serif-black"
        android:foregroundTint="#673AB7"
        android:text="@string/new_user"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/create_textView_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fn"
        android:textColor="#3F51B5"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/create_editText_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_here" />

    <TextView
        android:id="@+id/create_textView_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ln"
        android:textColor="#3F51B5"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/create_editText_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_here1"/>

    <Button
        android:id="@+id/create2_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create" />


</LinearLayout>