<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_main_backgroud">

    <Button
        android:id="@+id/weekSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#EAFAF1"
        android:background="@drawable/button_shape"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="@string/filter_by_date" />

    <Button
        android:id="@+id/monthSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#D4E6F1"
        android:textSize="20dp"
        android:background="@drawable/button_shape"
        android:text="@string/filter_by_month" />

    <Button
        android:id="@+id/yearSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:text="@string/filter_by_year"
        android:textColor="#9B59B6"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/allSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#76448A"
        android:textSize="20dp"
        android:background="@drawable/button_shape"
        android:text="@string/show_all_entries" />

    <Button
        android:id="@+id/emptyDatabase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cursorVisible="false"
        android:text="@string/clear_database"
        android:visibility="gone" />

    <Button
        android:id="@+id/addDatabase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_entry"
        android:visibility="gone" />

    <Button
        android:id="@+id/resetDatabase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:visibility="gone" />
</LinearLayout>