<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/entryDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/date"
        android:textColor = "#D5F5E3"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/entryType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/disability"
        android:textColor = "#F9E79F"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/entryRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/Severity"
        android:textSize="20sp"
        android:textColor = "#E59866"
        android:textStyle="bold" />



</LinearLayout>