<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_main_backgroud"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/listFilterButton"
            android:layout_width="205dp"
            android:layout_height="match_parent"
            android:background="@drawable/button_shape"
            android:textColor="#F2D7D5"
            android:textStyle="bold"
            android:text="@string/filter_dates" />

        <Button
            android:id="@+id/viewSummaryButton"
            android:layout_width="205dp"
            android:layout_height="match_parent"
            android:textColor="#F2D7D5"
            android:textStyle="bold"
            android:background="@drawable/button_shape"
            android:layout_weight="1"
            android:text="@string/view_summary" />
    </LinearLayout>

    <TextView
        android:id="@+id/listTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/range_of_entries"
        android:textColor="#F2D7D5"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/entryDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/date"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/entryType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/disability"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/entryRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Severity"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>

    <ListView
        android:id="@+id/savedList"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>