<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:background="#1976D2"
            android:gravity="bottom"
            android:text="@string/firstLine"
            android:textColor="#BBDEFB"
            android:includeFontPadding="true"
            android:textSize="40dp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#B2EBF2">

            <ImageButton
                android:id="@+id/imagecalendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/calendar55" />

            <TextView
                android:id="@+id/dateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:hint="Pick a date to enter data"
                android:textColor="#000000"
                android:textSize="22dp" />
        </RelativeLayout>>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#B2EBF2"
                android:gravity="center"
                android:text="@string/Vision"
                android:textColor="#303F9F"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#B2EBF2"
                android:gravity="center"
                android:text="@string/Speaking"
                android:textColor="#303F9F"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/imagevision"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:background="#B2EBF2"
                android:src="@drawable/vision" />

            <ImageButton
                android:id="@+id/imagespeaking"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:background="#B2EBF2"
                android:src="@drawable/speaking" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#B2EBF2"
                android:gravity="center"
                android:text="@string/Hearing"
                android:textColor="#303F9F"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#B2EBF2"
                android:gravity="center"
                android:text="@string/Walking"
                android:textColor="#303F9F"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/imagehearing"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:background="#B2EBF2"
                android:src="@drawable/hearing" />

            <ImageButton
                android:id="@+id/imagewalking"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:background="#B2EBF2"
                android:src="@drawable/walking" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#B2EBF2"
                android:gravity="center"
                android:text="@string/Eliminating"
                android:textColor="#303F9F"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#B2EBF2"
                android:gravity="center"
                android:text="@string/Feeding"
                android:textColor="#303F9F"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/imageeliminating"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#B2EBF2"
                android:src="@drawable/eliminating" />

            <ImageButton
                android:id="@+id/imagefeeding"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:background="#B2EBF2"
                android:src="@drawable/feeding" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#B2EBF2"
                android:gravity="center"
                android:text="@string/Dressing"
                android:textColor="#303F9F"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#B2EBF2"
                android:gravity="center"
                android:text="@string/Mental"
                android:textColor="#303F9F"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/imagedressing"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:background="#B2EBF2"
                android:src="@drawable/dressing" />

            <ImageButton
                android:id="@+id/imagemental"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:background="#B2EBF2"
                android:src="@drawable/mental" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="#B2EBF2"
            android:textSize="40dp"/>








    </LinearLayout>


</ScrollView>